short exploratory analysis to see if some new features can be constructed

--- a/notebooks/tfrs/tfrs_preprocessing.ipynb
+++ b/notebooks/tfrs/tfrs_preprocessing.ipynb
@@ -3221,7 +3221,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "Tensorflow",
    "language": "python",
    "name": "tf"
   },
